--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ authors = [
 requires-python = ">=3.12, <3.14"
 dependencies = [
     "colorama>=0.4.6",
+    "dotenv>=0.9.9",
     "fastapi>=0.124.2",
     "joblib>=1.5.2",
     "pandas>=2.3.3",
     "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "python-json-logger>=4.0.0",
     "scikit-learn>=1.8.0",
     "uvicorn>=0.38.0",
     "xgboost>=3.1.2",
