--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dev = [
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
     "ruff>=0.14.8",
+    "types-pyyaml>=6.0.12.20250915",
     "types-requests>=2.32.4.20250913",
     "typing-extensions>=4.15.0",
 ]
